--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,105 +1,3 @@
-<section>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <img class="logo-navbar" src="../assets/logo.webp" alt="Logo">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse d-flex flex-row-reverse" id="navbarSupportedContent">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Películas</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Series</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Ingresar -></a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-</section>
-<section class="my-5 mx-5">
-    <h1>PelisUP!</h1>
-    <h3>Plataforma para ver películas y series 😉</h3>
-</section>
-<section class="my-3 mx-5">
-    <div class="mb-2 input-group">
-        <span class="input-group-text" id="inputGroupPrepend">
-            <i class="bi bi-search"></i>
-        </span>
-        <input type="search" class="form-control" id="exampleFormControlInput1" placeholder="Buscar películas y series">
-    </div>
-</section>
-<section class="my-5 mx-5">
-    <div class="btn-group">
-        <label class="btn btn-primary"
-               btnCheckbox tabindex="0" role="button">Todos</label>
-        <label class="btn btn-primary"
-               btnCheckbox tabindex="0" role="button">Películas</label>
-        <label class="btn btn-primary"
-               btnCheckbox tabindex="0" role="button">Series</label>
-      </div>
-</section>
-<section class="my-5 mx-5">
-    <h2>Todos</h2>
-    <div class="container">
-        <div class="row">
-            <div class="card col-4 m-2" style="width: 18rem;">
-                <img src="../assets/portada.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-            </div>
-            <div class="card col-4 m-2" style="width: 18rem;">
-                <img src="../assets/portada.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-            </div>
-            <div class="card col-4 m-2" style="width: 18rem;">
-                <img src="../assets/portada.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-            </div>
-            <div class="card col-4 m-2" style="width: 18rem;">
-                <img src="../assets/portada.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-            </div>
-            <div class="card col-4 m-2" style="width: 18rem;">
-                <img src="../assets/portada.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-            </div>
-            <div class="card col-4 m-2" style="width: 18rem;">
-                <img src="../assets/portada.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-            </div>
-            <div class="card col-4 m-2" style="width: 18rem;">
-                <img src="../assets/portada.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-            </div>
-            <div class="card col-4 m-2" style="width: 18rem;">
-                <img src="../assets/portada.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+<app-header></app-header>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
