--- a/src/app/layout/components/footer/footer.component.html
+++ b/src/app/layout/components/footer/footer.component.html
@@ -1,5 +1,8 @@
 <div class="footer">
     <div class="container-fluid">
-        Hecho por Gustavo Tejada
+        Hecho por {{ usuario.name }} {{usuario.lastname}}
+    </div>
+    <div>
+        <a href="{{redesSociales.instagram}}"><i class="bi bi-search"></i></a>
     </div>
 </div>
