--- a/src/app/routes/components/inicio/inicio.component.html
+++ b/src/app/routes/components/inicio/inicio.component.html
@@ -12,15 +12,47 @@
 </section>
 <section class="my-5 mx-5">
     <div class="btn-group">
-        <label class="btn btn-primary"
-               btnCheckbox tabindex="0" role="button">Todos</label>
-        <label class="btn btn-primary"
-               btnCheckbox tabindex="0" role="button">Películas</label>
-        <label class="btn btn-primary"
-               btnCheckbox tabindex="0" role="button">Series</label>
+        <button class="btn btn-primary" [ngClass]="filter === 'Todos' ? 'btn-selected' : ''" 
+                role="button" (click)="changeFilter('Todos')" >Todos</button>
+
+        <button class="btn btn-primary" [ngClass]="filter === 'Peliculas' ? 'btn-selected' : ''"
+                role="button" (click)="changeFilter('Peliculas')">Películas</button>
+
+        <button class="btn btn-primary" [ngClass]="filter === 'Series' ? 'btn-selected' : ''"
+                role="button" (click)="changeFilter('Series')">Series</button>
       </div>
 </section>
 <section class="my-5 mx-5">
     <h2>Todos</h2>
-    <app-movie-card></app-movie-card>
+    <!-- <app-movie-card></app-movie-card> -->
+    <div class="container">
+        <div class="row">
+            <div class="card col-4 m-2" *ngFor="let movie of movies_series" style="width: 18rem;">
+                <div *ngIf="movie.category === 'Movie' && filter === 'Peliculas'">
+                    <img [src]="movie.image" class="card-img-top" [alt]="movie.name">
+                    <div class="card-body">
+                        <h2>{{movie.name}}</h2>
+                      <p class="card-text">{{ movie.description }}</p>
+                      <p class="card-text">RATING: {{movie.rating}}</p>
+                    </div>
+                </div>
+                <div *ngIf="movie.category === 'Serie' && filter === 'Series'">
+                    <img [src]="movie.image" class="card-img-top" [alt]="movie.name">
+                    <div class="card-body">
+                        <h2>{{movie.name}}</h2>
+                      <p class="card-text">{{ movie.description }}</p>
+                      <p class="card-text">RATING: {{movie.rating}}</p>
+                    </div>
+                </div>
+                <div *ngIf="filter === 'Todos'">
+                    <img [src]="movie.image" class="card-img-top" [alt]="movie.name">
+                    <div class="card-body">
+                        <h2>{{movie.name}}</h2>
+                      <p class="card-text">{{ movie.description }}</p>
+                      <p class="card-text">RATING: {{movie.rating}}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
