--- a/src/app/routes/components/inicio/inicio.component.html
+++ b/src/app/routes/components/inicio/inicio.component.html
@@ -24,34 +24,20 @@
 </section>
 <section class="my-5 mx-5">
     <h2>Todos</h2>
-    <!-- <app-movie-card></app-movie-card> -->
     <div class="container">
-        <div class="row">
-            <div class="card col-4 m-2" *ngFor="let movie of movies_series" style="width: 18rem;">
-                <div *ngIf="movie.category === 'Movie' && filter === 'Peliculas'">
-                    <img [src]="movie.image" class="card-img-top" [alt]="movie.name">
-                    <div class="card-body">
-                        <h2>{{movie.name}}</h2>
-                      <p class="card-text">{{ movie.description }}</p>
-                      <p class="card-text">RATING: {{movie.rating}}</p>
-                    </div>
-                </div>
-                <div *ngIf="movie.category === 'Serie' && filter === 'Series'">
-                    <img [src]="movie.image" class="card-img-top" [alt]="movie.name">
-                    <div class="card-body">
-                        <h2>{{movie.name}}</h2>
-                      <p class="card-text">{{ movie.description }}</p>
-                      <p class="card-text">RATING: {{movie.rating}}</p>
-                    </div>
-                </div>
-                <div *ngIf="filter === 'Todos'">
-                    <img [src]="movie.image" class="card-img-top" [alt]="movie.name">
-                    <div class="card-body">
-                        <h2>{{movie.name}}</h2>
-                      <p class="card-text">{{ movie.description }}</p>
-                      <p class="card-text">RATING: {{movie.rating}}</p>
-                    </div>
-                </div>
+        <div class="row" *ngIf="filter === 'Todos'">
+            <div class="col-3 m-2" *ngFor="let item of movies_series">
+                <app-movie-card [title]="item.title || item.name" [img]="'https://www.themoviedb.org/t/p/w220_and_h330_face' + item.poster_path"></app-movie-card>
+            </div>
+        </div>
+        <div class="row" *ngIf="filter === 'Peliculas'">
+            <div class="col-3 m-2" *ngFor="let item of movies">
+                <app-movie-card [title]="item.title || item.name" [img]="'https://www.themoviedb.org/t/p/w220_and_h330_face' + item.poster_path"></app-movie-card>
+            </div>
+        </div>
+        <div class="row" *ngIf="filter === 'Series'">
+            <div class="col-3 m-2" *ngFor="let item of series">
+                <app-movie-card [title]="item.title || item.name" [img]="'https://www.themoviedb.org/t/p/w220_and_h330_face' + item.poster_path"></app-movie-card>
             </div>
         </div>
     </div>
